--- a/CSS/moddatastyles.css
+++ b/CSS/moddatastyles.css
@@ -1,3 +1,18 @@
 .container {
-    width: 1000px;
+    width: 935px;
+    padding-bottom: 10px;
+}
+
+.assigned {
+    table-layout: fixed;
+    col:nth-child(1){width:10px}
+    col:nth-child(2){width:20px}
+}
+
+tfoot input {
+    width: 100%;
+}
+
+table{
+    table-layout: fixed;
 }
