--- a/CSS/moddatastyles.css
+++ b/CSS/moddatastyles.css
@@ -3,11 +3,10 @@
     padding-bottom: 10px;
 }
 
-.assigned {
-    table-layout: fixed;
-    col:nth-child(1){width:10px}
-    col:nth-child(2){width:20px}
-}
+.assigned col:nth-child(1){width:40px}
+.assigned col:nth-child(2){width:10px}
+.assigned col:nth-child(3){width:10px}
+.assigned col:nth-child(4){width:10px}
 
 tfoot input {
     width: 100%;
