--- a/CSS/moddatastyles.css
+++ b/CSS/moddatastyles.css
@@ -2,16 +2,15 @@
     width: 935px;
     padding-bottom: 10px;
 }
-
-.assigned col:nth-child(1){width:40px}
-.assigned col:nth-child(2){width:10px}
-.assigned col:nth-child(3){width:10px}
-.assigned col:nth-child(4){width:10px}
+.container2 {
+    width: 935px;
+    padding-bottom: 10px;
+}
 
 tfoot input {
     width: 100%;
 }
 
-table{
+table {
     table-layout: fixed;
 }
