Trimming Branches is easy
lost a lot of time recreating content, autocomplete redraws now remove previous data as well, added search button to call the creation of the datatables, as well as allowing the dtbl to reinitialize via destroy. Srch broke for hours with no reason why and came back all of a sudden.

--- a/CSS/moddatastyles.css
+++ b/CSS/moddatastyles.css
@@ -1,7 +1,8 @@
-.container {
+.dtWrap {
     width: 935px;
     padding-bottom: 10px;
     float:left;
+    display: none;
 }
 .container2 {
     width: 935px;
