--- a/CSS/moddataStyles.css
+++ b/CSS/moddataStyles.css
@@ -1,7 +1,7 @@
 .dtWrap {
     width: 935px;
     padding-bottom: 10px;
-    float:left;
+    float: left;
     display: none;
 }
 .container2 {
@@ -20,7 +20,43 @@ table {
 
 .btnholdr {
     float: right;
-    background-color: purple;
+}
+
+.assignBtnWrap {
+    padding-top: 40px;
+    float: left;
+    display: none;
+}
+
+.assgnBtn1 {
+    padding-top: 5px;
+    padding-bottom: 4px;
+    width: 25px;
+    background-color: lightblue;
+}
+.assgnBtn2 {
+    padding-top: 5px;
+    padding-bottom: 4px;
+    width: 25px;
+    background-color: lightgreen;
+}
+.assgnBtn3 {
+    padding-top: 5px;
+    padding-bottom: 4px;
+    width: 25px;
+    background-color: orange;
+}
+.assgnBtn4 {
+    padding-top: 5px;
+    padding-bottom: 4px;
+    width: 25px;
+    background-color: rgb(160, 81, 160);
+}
+.assgnBtn5 {
+    padding-top: 5px;
+    padding-bottom: 4px;
+    width: 25px;
+    background-color:  rgb(207, 207, 0);
 }
 
 #squadMembr0 {
