--- a/CSS/moddataStyles.css
+++ b/CSS/moddataStyles.css
@@ -78,3 +78,9 @@ table {
 .ui-helper-hidden-accessible {
     display:none !important;
 }
+
+.ui-menu .ui-menu-item a{
+    background:red;
+    height:10px;
+    font-size:8px;
+}
