--- a/CSS/moddataStyles.css
+++ b/CSS/moddataStyles.css
@@ -1,5 +1,6 @@
 body {
     font-size: 90%;
+    background-color: rgb(235, 235, 235);
 }
 .dtWrap {
     width: 935px;
@@ -62,25 +63,25 @@ tfoot input {
     padding-top: 5px;
     padding-bottom: 4px;
     width: 25px;
-    background-color: lightgreen;
+    background-color: rgba(144, 238, 144, 0.788);
 }
 .assgnBtn3 {
     padding-top: 5px;
     padding-bottom: 4px;
     width: 25px;
-    background-color: orange;
+    background-color: rgba(255, 166, 0, 0.850);
 }
 .assgnBtn4 {
     padding-top: 5px;
     padding-bottom: 4px;
     width: 25px;
-    background-color: rgb(160, 81, 160);
+    background-color: rgba(189, 96, 189, 0.788);
 }
 .assgnBtn5 {
     padding-top: 5px;
     padding-bottom: 4px;
     width: 25px;
-    background-color:  rgb(207, 207, 0);
+    background-color:  rgba(245, 245, 113, 0.780);
 }
 
 /* squad member table settings */
@@ -88,16 +89,16 @@ tfoot input {
     background-color: lightblue;
 }
 #squadMembr1 {
-    background-color: lightgreen;
+    background-color: rgba(144, 238, 144, 0.788);
 }
 #squadMembr2 {
-    background-color: orange;
+    background-color: rgba(255, 166, 0, 0.850);
 }
 #squadMembr3 {
-    background-color: rgb(160, 81, 160);
+    background-color: rgba(189, 96, 189, 0.788);
 }
 #squadMembr4 {
-    background-color: rgb(207, 207, 0);
+    background-color: rgba(245, 245, 113, 0.780);
 }
 
 /* Autocomplete Styling */
